fixed issue where header logo would be too wide on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2205,8 +2205,15 @@ table p {
 }
 
 .logo-main {
-  max-width: 10rem !important;
+  max-width: 10rem;
 }
+
+@media only screen and (max-width: 991px) {
+  .logo-main {
+    max-width: 5rem;
+  }
+}
+
 .header-logo-area .logo-light {
   display: none;
 }
